# tp_2_nosferatu

./: CMakeLists.txt  agua_bendita.cpp  agua_bendita.h  arch_estado.cpp  arch_estado.h  bala.cpp  bala.h  cazavampiro.cpp  cazavampiro.h  cruz.cpp  cruz.h  elemento.cpp  elemento.h  escopeta.cpp  escopeta.h  estaca.cpp  estaca.h  estado.txt  humano.cpp  humano.h  lista.cpp  lista.h  main.cpp  menu.cpp  menu.h  menu_alta.cpp  menu_alta.h  menu_baja.cpp  menu_baja.h  menu_consulta.cpp  menu_consulta.h  monstruo.h  nodo.cpp  nodo.h  nosferatu.cpp  nosferatu.h  objeto.cpp  objeto.h  ser.h  seres_elementos.h  (+11 more)
