cmake_minimum_required(VERSION 3.19)
project(beta_TP2)

set(CMAKE_CXX_STANDARD 14)

add_executable(beta_TP2 main.cpp objeto.h nodo.cpp nodo.h utiles.h lista.cpp lista.h arch_estado.cpp arch_estado.h tablero.cpp tablero.h menu.cpp menu.h menu_consulta.cpp menu_consulta.h elemento.cpp elemento.h ser.h monstruo.h humano.cpp humano.h vanesa.cpp vanesa.h cazavampiro.cpp cazavampiro.h zombi.cpp zombi.h vampiro.cpp vampiro.h vampirella.cpp vampirella.h nosferatu.cpp nosferatu.h agua_bendita.cpp agua_bendita.h cruz.cpp cruz.h estaca.cpp estaca.h escopeta.cpp escopeta.h bala.cpp bala.h menu_alta.cpp menu_alta.h menu_baja.cpp menu_baja.h objeto.cpp seres_elementos.h)